<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="passListLabel">Password List</string>
    <string name="app_name">Passgori</string>
    <string name="usernameLabel">Username</string>
    <string name="passwordLabel">Password</string>
    <string name="notesLabel">Notes</string>
    <string name="saveButtonLabel">Save</string>
    <string name="cancelButtonLabel">Cancel</string>
    <string name="appDescription">Safely store your passwords in the cloud</string>
	<string name="loadingListLabel">Loading Available Passwords...</string>
	<string name="refresh">Refresh</string>
	<string name="refreshing">Refreshing...</string>
	<string name="add">Add</string>
	<string name="configurePassgori">Configure Passgori</string>
	<string name="serviceBindError">Failed to Bind to Internal Service</string>
	<string name="noPasswordsError">No Passwords</string>
	<string name="editPassword">Edit Password</string>
	<string name="deletePassword">Delete Password</string>
	<string name="configurations">Configurations</string>
	<string name="serverLabel">Server</string>
	<string name="portLabel">Port</string>
	<string name="serverPrefixLabel">Server Prefix</string>
</resources>