<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
    	android:layout_height="match_parent"
        >
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:orientation="vertical" >
		    
		    <TextView
		        android:id="@+id/passwordTitle"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="Password Title"
		        android:textAppearance="?android:attr/textAppearanceLarge" />
		
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/usernameLabel"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		
		    <TextView
		        android:id="@+id/usernameField"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="myUsername"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/passwordLabel"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		
		    <TextView
		        android:id="@+id/passwordField"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="myPassword"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/notesLabel"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		    <TextView
		        android:id="@+id/notesField"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="myNotes"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		</LinearLayout>
    </ScrollView>
</LinearLayout>